--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask
-flask-cors
-sentence-transformers
-numpy
-firebase-admin
+flask==2.0.1
+flask-cors==3.0.10
+numpy==1.21.2
+firebase-admin==6.0.1
+sentence-transformers==2.2.2
+torch==1.9.0
